--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
-    "data_users": "node ./models/data/users"
+    "data_users": "node ./models/data/users",
+    "data_categories": "node ./models/data/categories",
+    "data_books": "node ./models/data/books"
   },
   "type": "module",
   "dependencies": {
